<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/form"
        android:textColor="#6A6A6A"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="13dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        tools:srcCompat="@tools:sample/avatars" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="11dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </HorizontalScrollView>

    <View
        android:layout_width="248dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"
        android:foregroundGravity="center|center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/welcome"
        android:textColor="#6A6A6A" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/first"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Last"
            android:inputType="textPersonName"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="86dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Gender"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="74dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/Male"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="90dp"
            android:layout_height="21dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/Female"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="108dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ID"
            android:textSize="18sp" />

        <EditText
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="107dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/School"
            android:textSize="18sp" />

        <EditText
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="109dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="108dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"/>


    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="31dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="Register"
        app:backgroundTint="#FF9800" />




</LinearLayout>